Rename test directory

--- a/.github/workflows/CI-python.yml
+++ b/.github/workflows/CI-python.yml
@@ -35,5 +35,5 @@ jobs:
       shell: bash -l {0}
       run: |
         conda install pytest
-        pytest ./test -s -v
+        pytest ./tests -s -v
 
