--- a/.github/workflows/CI-python.yml
+++ b/.github/workflows/CI-python.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         packageDirectory: ["ml_wrappers"]
         operatingSystem: [ubuntu-latest, macos-latest, windows-latest]
-        pythonVersion: [3.6, 3.7, 3.8, 3.9]
+        pythonVersion: [3.6, 3.7, 3.8, 3.9, '3.10']
 
     runs-on: ${{ matrix.operatingSystem }}
 
