--- a/.github/workflows/pip-python-tests.yml
+++ b/.github/workflows/pip-python-tests.yml
@@ -10,11 +10,11 @@ on:
     branches: [main]
 
 jobs:
-  build:
-
+  pip-python-tests:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        packageDirectory: ["ml_wrappers"]
         python-version: [3.6, 3.7, 3.8, 3.9, '3.10']
         os: [ubuntu-latest, macos-latest, windows-latest]
 
@@ -27,12 +27,11 @@ jobs:
     - name: Upgrade pip
       run: |
         python -m pip install --upgrade pip
-    - name: Install core dependencies
+    - name: Install package
       run: |
         pip install -e ./python
-        pip install pytest
     - name: Test with pytest
       run: |
         # pytest
-        pytest tests/
-  
+        pip install pytest
+        pytest .tests/ -s -v
