--- a/.github/workflows/CI-python.yml
+++ b/.github/workflows/CI-python.yml
@@ -26,9 +26,18 @@ jobs:
       shell: bash -l {0}
       run: |
         pip install -e ./python
+    - if: ${{ matrix.operatingSystem != 'macos-latest' }}
+      name: Install pytorch on non-MacOS
+      shell: bash -l {0}
+      run: |
+        conda install --yes --quiet pytorch torchvision captum cpuonly -c pytorch
+    - if: ${{ matrix.operatingSystem == 'macos-latest' }}
+      name: Install Anaconda packages on MacOS, which should not include cpuonly according to official docs
+      shell: bash -l {0}
+      run: |
+        conda install --yes --quiet pytorch torchvision captum -c pytorch
     - name: Test with pytest
       shell: bash -l {0}
       run: |
         conda install pytest
         pytest ./tests -s -v
-
