--- a/.github/workflows/CI-python.yml
+++ b/.github/workflows/CI-python.yml
@@ -36,8 +36,30 @@ jobs:
       shell: bash -l {0}
       run: |
         conda install --yes --quiet pytorch torchvision captum -c pytorch
+    - name: Install test dependencies
+      shell: bash -l {0}
+      run: |
+        pip install -r requirements-test.txt
     - name: Test with pytest
       shell: bash -l {0}
       run: |
-        conda install pytest
-        pytest ./tests -s -v
+        pytest ./tests -s -v --cov='ml_wrappers' --cov-report=xml --cov-report=html
+    - name: Upload code coverage results
+      uses: actions/upload-artifact@v2
+      with:
+        name: ${{ matrix.packageDirectory }}-code-coverage-results
+        path: htmlcov
+      # Use always() to always run this step to publish test results when there are test failures
+      if: ${{ always() }}
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v2
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        directory: .
+        env_vars: OS,PYTHON
+        fail_ci_if_error: true
+        files: ./coverage.xml
+        flags: unittests
+        name: codecov-umbrella
+        path_to_write_report: ./coverage/codecov_report.txt
+        verbose: true
