--- a/.github/workflows/CI-python.yml
+++ b/.github/workflows/CI-python.yml
@@ -22,10 +22,11 @@ jobs:
       with:
         auto-update-conda: true
         python-version: ${{ matrix.pythonVersion }}
-    - name: Install package
+    - if: ${{ matrix.operatingSystem == 'macos-latest' }}
+      name: Use Homebrew to install libomp on MacOS
       shell: bash -l {0}
       run: |
-        pip install -e ./python
+        brew install libomp
     - if: ${{ matrix.operatingSystem != 'macos-latest' }}
       name: Install pytorch on non-MacOS
       shell: bash -l {0}
@@ -36,6 +37,19 @@ jobs:
       shell: bash -l {0}
       run: |
         conda install --yes --quiet pytorch torchvision captum -c pytorch
+    - if: ${{ matrix.operatingSystem == 'macos-latest' }}
+      name: Install lightgbm from conda on MacOS
+      shell: bash -l {0}
+      run: |
+        conda install --yes -c conda-forge lightgbm
+    - name: Install package
+      shell: bash -l {0}
+      run: |
+        pip install -e ./python
+    - name: Install dev dependencies
+      shell: bash -l {0}
+      run: |
+        pip install -r requirements-dev.txt
     - name: Install test dependencies
       shell: bash -l {0}
       run: |
