--- a/.github/workflows/conda-python-tests.yml
+++ b/.github/workflows/conda-python-tests.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         packageDirectory: ["ml_wrappers"]
         operatingSystem: [ubuntu-latest, macos-latest, windows-latest]
-        pythonVersion: [3.6, 3.7, 3.8, 3.9]
+        pythonVersion: [3.6, 3.7, 3.8, 3.9, '3.10']
 
     steps:
     - uses: actions/checkout@v2
