--- a/.github/workflows/CI-python.yml
+++ b/.github/workflows/CI-python.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         packageDirectory: ["ml_wrappers"]
         operatingSystem: [ubuntu-latest, macos-latest, windows-latest]
-        pythonVersion: [3.6, 3.7, 3.8, 3.9, '3.10']
+        pythonVersion: ['3.6', '3.7', '3.8', '3.9', '3.10']
 
     runs-on: ${{ matrix.operatingSystem }}
 
@@ -27,6 +27,11 @@ jobs:
       shell: bash -l {0}
       run: |
         brew install libomp
+    - if: ${{ matrix.pythonVersion != '3.6' }}
+      name: Install numpy
+      shell: bash -l {0}
+      run: |
+        conda install --yes --quiet "numpy<=1.22.4" -c conda-forge
     - if: ${{ matrix.operatingSystem != 'macos-latest' }}
       name: Install pytorch on non-MacOS
       shell: bash -l {0}
