--- a/.github/workflows/CI-python-AutoML.yml
+++ b/.github/workflows/CI-python-AutoML.yml
@@ -1,4 +1,4 @@
-name: CI Python
+name: CI Python AutoML
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
       matrix:
         packageDirectory: ["ml_wrappers"]
         operatingSystem: [ubuntu-latest, macos-latest, windows-latest]
-        pythonVersion: ['3.6', '3.7', '3.8', '3.9', '3.10']
+        pythonVersion: ['3.7']
 
     runs-on: ${{ matrix.operatingSystem }}
 
@@ -49,14 +49,18 @@ jobs:
       shell: bash -l {0}
       run: |
         conda install --yes -c conda-forge lightgbm
-    - name: Install package
-      shell: bash -l {0}
-      run: |
-        pip install -e ./python
     - name: Install dev dependencies
       shell: bash -l {0}
       run: |
         pip install -r requirements-dev.txt
+    - name: Install automl dependencies
+      shell: bash -l {0}
+      run: |
+        pip install -r requirements-automl.txt        
+    - name: Install package
+      shell: bash -l {0}
+      run: |
+        pip install -e ./python
     - name: Install test dependencies
       shell: bash -l {0}
       run: |
@@ -64,7 +68,7 @@ jobs:
     - name: Test with pytest
       shell: bash -l {0}
       run: |
-        pytest ./tests/main -s -v --durations=10 --cov='ml_wrappers' --cov-report=xml --cov-report=html
+        pytest ./tests/automl -s -v --durations=10 --cov='ml_wrappers' --cov-report=xml --cov-report=html
     - name: Upload code coverage results
       uses: actions/upload-artifact@v3
       with:
