--- a/.github/workflows/CI-python.yml
+++ b/.github/workflows/CI-python.yml
@@ -49,6 +49,11 @@ jobs:
       shell: bash -l {0}
       run: |
         conda install --yes -c conda-forge lightgbm
+    - if: ${{ matrix.pythonVersion == '3.7' }}
+      name: Install dev dependencies
+      shell: bash -l {0}
+      run: |
+        pip install -r requirements-automl.txt
     - name: Install package
       shell: bash -l {0}
       run: |
