fix failing ml-wrappers release build due to automl tests being included without dependencies installed

--- a/.github/workflows/release-ml-wrappers.yml
+++ b/.github/workflows/release-ml-wrappers.yml
@@ -68,7 +68,7 @@ jobs:
 
       - name: run ml-wrappers tests
         shell: bash -l {0}
-        run: pytest ./tests/
+        run: pytest ./tests/main
 
       - name: Upload a ml-wrappers build result
         uses: actions/upload-artifact@v2
