--- a/.github/workflows/CI-python.yml
+++ b/.github/workflows/CI-python.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   ci-python:
     strategy:
+      fail-fast: false
       matrix:
         packageDirectory: ["ml_wrappers"]
         operatingSystem: [ubuntu-latest, macos-latest, windows-latest]
