--- a/.github/workflows/CI-python.yml
+++ b/.github/workflows/CI-python.yml
@@ -11,10 +11,9 @@ on:
 jobs:
   ci-python:
     strategy:
-      fail-fast: false
       matrix:
         packageDirectory: ["ml_wrappers"]
-        operatingSystem: [ubuntu-latest, macos-latest, windows-latest]
+        operatingSystem: [ubuntu-latest, windows-latest]
         pythonVersion: ['3.6', '3.7', '3.8', '3.9', '3.10']
 
     runs-on: ${{ matrix.operatingSystem }}
