--- a/.github/workflows/CI-python.yml
+++ b/.github/workflows/CI-python.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         packageDirectory: ["ml_wrappers"]
-        operatingSystem: [ubuntu-latest, windows-latest]
+        operatingSystem: [ubuntu-latest, macos-latest, windows-latest]
         pythonVersion: ['3.6', '3.7', '3.8', '3.9', '3.10']
 
     runs-on: ${{ matrix.operatingSystem }}
@@ -29,21 +29,26 @@ jobs:
       shell: bash -l {0}
       run: |
         brew install libomp
-    - if: ${{ matrix.pythonVersion != '3.6' }}
-      name: Install numpy
+    - if: ${{ matrix.operatingSystem != 'macos-latest' && matrix.pythonVersion != '3.6' }}
+      name: Install pytorch on non-MacOS for python 3.7 to 3.10
       shell: bash -l {0}
       run: |
-        conda install --yes --quiet "numpy<=1.22.4" -c conda-forge
-    - if: ${{ matrix.operatingSystem != 'macos-latest' }}
-      name: Install pytorch on non-MacOS
+        conda install --yes --quiet pytorch torchvision captum cpuonly -c pytorch -c conda-forge
+    - if: ${{ matrix.operatingSystem != 'macos-latest' && matrix.pythonVersion == '3.6' }}
+      name: Install pytorch on non-MacOS for python 3.6
       shell: bash -l {0}
       run: |
-        conda install --yes --quiet pytorch torchvision captum cpuonly -c pytorch
-    - if: ${{ matrix.operatingSystem == 'macos-latest' }}
-      name: Install Anaconda packages on MacOS, which should not include cpuonly according to official docs
+        conda install --yes --quiet "pytorch<1.11.0" torchvision captum cpuonly -c pytorch
+    - if: ${{ matrix.operatingSystem == 'macos-latest' && matrix.pythonVersion != '3.6' }}
+      name: Install pytorch on MacOS for python 3.7 to 3.10
       shell: bash -l {0}
       run: |
-        conda install --yes --quiet pytorch torchvision captum -c pytorch
+        conda install --yes --quiet pytorch torchvision captum -c pytorch -c conda-forge
+    - if: ${{ matrix.operatingSystem == 'macos-latest' && matrix.pythonVersion == '3.6' }}
+      name: Install pytorch on MacOS for python 3.6
+      shell: bash -l {0}
+      run: |
+        conda install --yes --quiet "pytorch<1.11.0" torchvision captum -c pytorch
     - if: ${{ matrix.operatingSystem == 'macos-latest' }}
       name: Install lightgbm from conda on MacOS
       shell: bash -l {0}
