--- a/.github/workflows/CI-python-AutoML.yml
+++ b/.github/workflows/CI-python-AutoML.yml
@@ -1,4 +1,4 @@
-name: CI Python
+name: CI Python AutoML
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
       matrix:
         packageDirectory: ["ml_wrappers"]
         operatingSystem: [ubuntu-latest, macos-latest, windows-latest]
-        pythonVersion: ['3.6', '3.7', '3.8', '3.9', '3.10']
+        pythonVersion: ['3.7']
 
     runs-on: ${{ matrix.operatingSystem }}
 
@@ -29,39 +29,38 @@ jobs:
       shell: bash -l {0}
       run: |
         brew install libomp
-    - if: ${{ matrix.operatingSystem != 'macos-latest' && matrix.pythonVersion != '3.6' }}
-      name: Install pytorch on non-MacOS for python 3.7 to 3.10
+    - if: ${{ matrix.pythonVersion != '3.6' }}
+      name: Install numpy
       shell: bash -l {0}
       run: |
-        conda install --yes --quiet pytorch torchvision captum cpuonly -c pytorch -c conda-forge
-    - if: ${{ matrix.operatingSystem != 'macos-latest' && matrix.pythonVersion == '3.6' }}
-      name: Install pytorch on non-MacOS for python 3.6
+        conda install --yes --quiet "numpy<=1.22.4" -c conda-forge
+    - if: ${{ matrix.operatingSystem != 'macos-latest' }}
+      name: Install pytorch on non-MacOS
       shell: bash -l {0}
       run: |
-        conda install --yes --quiet "pytorch<1.11.0" torchvision captum cpuonly -c pytorch
-    - if: ${{ matrix.operatingSystem == 'macos-latest' && matrix.pythonVersion != '3.6' }}
-      name: Install pytorch on MacOS for python 3.7 to 3.10
+        conda install --yes --quiet pytorch torchvision captum cpuonly -c pytorch
+    - if: ${{ matrix.operatingSystem == 'macos-latest' }}
+      name: Install Anaconda packages on MacOS, which should not include cpuonly according to official docs
       shell: bash -l {0}
       run: |
-        conda install --yes --quiet pytorch torchvision captum -c pytorch -c conda-forge
-    - if: ${{ matrix.operatingSystem == 'macos-latest' && matrix.pythonVersion == '3.6' }}
-      name: Install pytorch on MacOS for python 3.6
-      shell: bash -l {0}
-      run: |
-        conda install --yes --quiet "pytorch<1.11.0" torchvision captum -c pytorch
+        conda install --yes --quiet pytorch torchvision captum -c pytorch
     - if: ${{ matrix.operatingSystem == 'macos-latest' }}
       name: Install lightgbm from conda on MacOS
       shell: bash -l {0}
       run: |
         conda install --yes -c conda-forge lightgbm
-    - name: Install package
-      shell: bash -l {0}
-      run: |
-        pip install -e ./python
     - name: Install dev dependencies
       shell: bash -l {0}
       run: |
         pip install -r requirements-dev.txt
+    - name: Install automl dependencies
+      shell: bash -l {0}
+      run: |
+        pip install -r requirements-automl.txt        
+    - name: Install package
+      shell: bash -l {0}
+      run: |
+        pip install -e ./python
     - name: Install test dependencies
       shell: bash -l {0}
       run: |
@@ -69,7 +68,7 @@ jobs:
     - name: Test with pytest
       shell: bash -l {0}
       run: |
-        pytest ./tests/main -s -v --durations=10 --cov='ml_wrappers' --cov-report=xml --cov-report=html
+        pytest ./tests/automl -s -v --durations=10 --cov='ml_wrappers' --cov-report=xml --cov-report=html
     - name: Upload code coverage results
       uses: actions/upload-artifact@v3
       with:
