--- a/.github/workflows/CI-python-minimal.yml
+++ b/.github/workflows/CI-python-minimal.yml
@@ -1,4 +1,4 @@
-name: CI Python AutoML
+name: CI Python minimal environment
 
 on:
   push:
@@ -9,12 +9,12 @@ on:
     - cron:  '30 5 * * *'
 
 jobs:
-  ci-python-automl:
+  ci-python-minimal:
     strategy:
       matrix:
         packageDirectory: ["ml_wrappers"]
         operatingSystem: [ubuntu-latest, macos-latest, windows-latest]
-        pythonVersion: ['3.7']
+        pythonVersion: ['3.6', '3.7', '3.8', '3.9', '3.10']
 
     runs-on: ${{ matrix.operatingSystem }}
 
@@ -24,39 +24,6 @@ jobs:
       with:
         auto-update-conda: true
         python-version: ${{ matrix.pythonVersion }}
-    - if: ${{ matrix.operatingSystem == 'macos-latest' }}
-      name: Use Homebrew to install libomp on MacOS
-      shell: bash -l {0}
-      run: |
-        brew install libomp
-    - if: ${{ matrix.pythonVersion != '3.6' }}
-      name: Install numpy
-      shell: bash -l {0}
-      run: |
-        conda install --yes --quiet "numpy<=1.22.4" -c conda-forge
-    - if: ${{ matrix.operatingSystem != 'macos-latest' }}
-      name: Install pytorch on non-MacOS
-      shell: bash -l {0}
-      run: |
-        conda install --yes --quiet pytorch torchvision captum cpuonly -c pytorch
-    - if: ${{ matrix.operatingSystem == 'macos-latest' }}
-      name: Install Anaconda packages on MacOS, which should not include cpuonly according to official docs
-      shell: bash -l {0}
-      run: |
-        conda install --yes --quiet pytorch torchvision captum -c pytorch
-    - if: ${{ matrix.operatingSystem == 'macos-latest' }}
-      name: Install lightgbm from conda on MacOS
-      shell: bash -l {0}
-      run: |
-        conda install --yes -c conda-forge lightgbm
-    - name: Install dev dependencies
-      shell: bash -l {0}
-      run: |
-        pip install -r requirements-dev.txt
-    - name: Install automl dependencies
-      shell: bash -l {0}
-      run: |
-        pip install -r requirements-automl.txt        
     - name: Install package
       shell: bash -l {0}
       run: |
@@ -68,7 +35,7 @@ jobs:
     - name: Test with pytest
       shell: bash -l {0}
       run: |
-        pytest ./tests/automl -s -v --durations=10 --cov='ml_wrappers' --cov-report=xml --cov-report=html
+        pytest ./tests/minimal -s -v --durations=10 --cov='ml_wrappers' --cov-report=xml --cov-report=html
     - name: Upload code coverage results
       uses: actions/upload-artifact@v3
       with:
