--- a/.github/workflows/python-linting.yml
+++ b/.github/workflows/python-linting.yml
@@ -30,5 +30,5 @@ jobs:
         isort . -c
     - name: Lint code with flake8
       run: |
-        flake8 . --max-line-length=119 --count --max-complexity=20 --exclude=.git/,__pycache__/,dist/ --show-source --statistics
+        flake8 .
 
