--- a/.github/workflows/CI-python-AutoML.yml
+++ b/.github/workflows/CI-python-AutoML.yml
@@ -49,6 +49,10 @@ jobs:
       shell: bash -l {0}
       run: |
         conda install --yes -c conda-forge lightgbm
+    - name: Install pycocotools for automl
+      shell: bash -l {0}
+      run: |
+        conda install --yes --quiet pycocotools==2.0.4 -c conda-forge
     - name: Install dev dependencies
       shell: bash -l {0}
       run: |
