--- a/requirements-linting.txt
+++ b/requirements-linting.txt
@@ -1,9 +1,9 @@
-flake8==4.0.1
-flake8-bugbear==21.11.29
-flake8-blind-except==0.1.1
+flake8
+flake8-bugbear
+flake8-blind-except
 flake8-breakpoint
-flake8-builtins==1.5.3
-flake8-logging-format==0.6.0
+flake8-builtins
+flake8-logging-format
 flake8-pytest-style
 flake8-all-not-strings
 isort
