--- a/.github/workflows/CI-python-minimal.yml
+++ b/.github/workflows/CI-python-minimal.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         packageDirectory: ["ml_wrappers"]
         operatingSystem: [ubuntu-latest, macos-latest, windows-latest]
-        pythonVersion: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        pythonVersion: ['3.8', '3.9', '3.10', '3.11']
 
     runs-on: ${{ matrix.operatingSystem }}
 
