--- a/.github/workflows/CI-python.yml
+++ b/.github/workflows/CI-python.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         packageDirectory: ["ml_wrappers"]
         operatingSystem: [ubuntu-latest, macos-latest, windows-latest]
-        pythonVersion: ['3.8', '3.9', '3.10']
+        pythonVersion: ['3.8', '3.9', '3.10', '3.11']
 
     runs-on: ${{ matrix.operatingSystem }}
 
@@ -30,12 +30,12 @@ jobs:
       run: |
         brew install libomp
     - if: ${{ matrix.operatingSystem == 'windows-latest' && matrix.pythonVersion != '3.6' }}
-      name: Install pytorch on windows for python 3.7 to 3.10
+      name: Install pytorch on windows for python 3.7 to 3.11
       shell: bash -l {0}
       run: |
         conda install --yes --quiet "pytorch<2.0.0" torchvision captum cpuonly "libtiff<4.5.0" -c pytorch -c conda-forge --strict-channel-priority
     - if: ${{ matrix.operatingSystem == 'ubuntu-latest' && matrix.pythonVersion != '3.6' }}
-      name: Install pytorch on ubuntu for python 3.7 to 3.10
+      name: Install pytorch on ubuntu for python 3.7 to 3.11
       shell: bash -l {0}
       run: |
         conda install --yes --quiet "pytorch<2.0.0" torchvision captum cpuonly -c pytorch -c conda-forge --strict-channel-priority
