--- a/.github/workflows/CI-python.yml
+++ b/.github/workflows/CI-python.yml
@@ -15,6 +15,16 @@ jobs:
         packageDirectory: ["ml_wrappers"]
         operatingSystem: [ubuntu-latest, macos-latest, windows-latest]
         pythonVersion: ['3.8', '3.9', '3.10']
+        openaiVersion: ['0.28.1', 'openai-latest']
+        exclude:
+          - openaiVersion: '0.28.1'
+            pythonVersion: '3.9'
+          - openaiVersion: '0.28.1'
+            pythonVersion: '3.10'
+          - openaiVersion: '0.28.1'
+            operatingSystem: 'macos-latest'
+          - openaiVersion: '0.28.1'
+            operatingSystem: 'windows-latest'
 
     runs-on: ${{ matrix.operatingSystem }}
 
@@ -61,6 +71,11 @@ jobs:
       shell: bash -l {0}
       run: |
         pip install -r requirements-test.txt
+    - if: ${{ matrix.openaiVersion != 'openai-latest' }}
+      name: Install openai version ${{ matrix.openaiVersion }}
+      shell: bash -l {0}
+      run: |
+        pip install openai==${{ matrix.openaiVersion }}
     - name: Test with pytest
       shell: bash -l {0}
       run: |
