--- a/.github/workflows/CI-python-AutoML.yml
+++ b/.github/workflows/CI-python-AutoML.yml
@@ -13,8 +13,8 @@ jobs:
     strategy:
       matrix:
         packageDirectory: ["ml_wrappers"]
-        operatingSystem: [ubuntu-latest, macos-latest, windows-latest]
-        pythonVersion: ['3.7']
+        operatingSystem: [ubuntu-latest]
+        pythonVersion: ['3.9']
 
     runs-on: ${{ matrix.operatingSystem }}
 
@@ -33,34 +33,26 @@ jobs:
       name: Install numpy
       shell: bash -l {0}
       run: |
-        conda install --yes --quiet "numpy<=1.22.4" -c conda-forge
+        conda install --yes --quiet "numpy<2.0" -c conda-forge
     - if: ${{ matrix.operatingSystem != 'macos-latest' }}
       name: Install pytorch on non-MacOS
       shell: bash -l {0}
       run: |
-        conda install --yes --quiet pytorch torchvision captum cpuonly -c pytorch
+        conda install --yes --quiet pytorch==2.2.2 torchvision captum cpuonly -c pytorch
     - if: ${{ matrix.operatingSystem == 'macos-latest' }}
       name: Install Anaconda packages on MacOS, which should not include cpuonly according to official docs
       shell: bash -l {0}
       run: |
-        conda install --yes --quiet pytorch torchvision captum -c pytorch
+        conda install --yes --quiet pytorch==2.2.2 torchvision captum -c pytorch
     - if: ${{ matrix.operatingSystem == 'macos-latest' }}
       name: Install lightgbm from conda on MacOS
       shell: bash -l {0}
       run: |
         conda install --yes -c conda-forge lightgbm
-    - name: Install pycocotools for automl
-      shell: bash -l {0}
-      run: |
-        conda install --yes --quiet pycocotools==2.0.4 -c conda-forge
-    - name: Install dev dependencies
-      shell: bash -l {0}
-      run: |
-        pip install -r requirements-dev.txt
     - name: Install automl dependencies
       shell: bash -l {0}
       run: |
-        pip install -r requirements-automl.txt        
+        pip install -r requirements-automl.txt
     - name: Install package
       shell: bash -l {0}
       run: |
