--- a/.github/workflows/release-ml-wrappers.yml
+++ b/.github/workflows/release-ml-wrappers.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v3
         with:
           auto-update-conda: true
-          python-version: 3.8
+          python-version: 3.9
 
       - if: ${{ matrix.operatingSystem != 'macos-latest' }}
         name: Install pytorch on non-MacOS
@@ -45,10 +45,19 @@ jobs:
           python -m pip install --upgrade pip
           pip install --upgrade setuptools wheel twine
 
-      - name: install requirements for ml-wrappers
+      - name: Install backwards-compatible tf-keras for transformers
+        shell: bash -l {0}
+        run: |
+          pip install tf-keras
+
+      - name: Install dev dependencies
         shell: bash -l {0}
         run: |
           pip install -r requirements-dev.txt
+    
+      - name: Install test dependencies
+        shell: bash -l {0}
+        run: |
           pip install -r requirements-test.txt
 
       - name: pip freeze
