--- a/.github/workflows/CI-python-minimal.yml
+++ b/.github/workflows/CI-python-minimal.yml
@@ -42,9 +42,9 @@ jobs:
       run: |
         pytest ./tests/minimal -s -v --durations=10 --cov='ml_wrappers' --cov-report=xml --cov-report=html
     - name: Upload code coverage results
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: ${{ matrix.packageDirectory }}-code-coverage-results
+        name: ${{ matrix.packageDirectory }}-${{ matrix.pythonVersion }}-${{ matrix.operatingSystem }}-code-coverage-results
         path: htmlcov
       # Use always() to always run this step to publish test results when there are test failures
       if: ${{ always() }}
