--- a/.github/workflows/CI-python-AutoML.yml
+++ b/.github/workflows/CI-python-AutoML.yml
@@ -38,7 +38,7 @@ jobs:
       name: Install pytorch on non-MacOS
       shell: bash -l {0}
       run: |
-        conda install --yes --quiet pytorch==2.2.2 torchvision captum cpuonly -c pytorch
+        conda install --yes --quiet pytorch==2.2.2 torchvision captum cpuonly intel-openmp -c pytorch -c conda-forge
     - if: ${{ matrix.operatingSystem == 'macos-latest' }}
       name: Install Anaconda packages on MacOS, which should not include cpuonly according to official docs
       shell: bash -l {0}
